--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
-        "predis/predis": "^1.1",
+        "predis/predis": "^v2.2.2",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
