script youtube arreglat

--- a/.env
+++ b/.env
@@ -63,3 +63,12 @@ GITHUB_CLIENT_SECRET=2a5c9fc9d0708f328efc101b5f7a11d220401f88
 GITHUB_REDIRECT_URL=http://casteaching.test/auth/callback
 
 YOUTUBE_API_KEY=AIzaSyDN49V35Itsj812dSwFjHlUVOqTZa7ab8Y
+
+PADDLE_SANDBOX=true
+PADDLE_VENDOR_ID=20024
+PADDLE_VENDOR_AUTH_CODE=b4c95c8025b28a9cc5f0c7a2231210415291b4b42bf9d4f08b
+PADDLE_PUBLIC_KEY=test_07629e5a6c87b4a2062a16f3aed
+
+CASHIER_CURRENCY=EUR
+CASHIER_CURRENCY_LOCALE=ca_ES
+
