--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "alaouy/youtube": "^2.2",
         "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/cashier-paddle": "^2.4",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.2",
         "laravel/sanctum": "^3.3",
